[package]
name = "hourly-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = "0.3.5"
activitystreams-kinds = "0.3.0"
actix-files = "0.6.2"
actix-web = "4"
actix-webfinger = "0.4.1"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.2", features = [ "default", "opentelemetry_0_18" ] }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = { version = "0.18" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
