[package]
name = "hourly-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = "0.3.5"
activitystreams-kinds = "0.3.0"
axum = { version = "0.6.8", features = ["headers"] }
axum-server = { version = "0.4.6", features = [ "tls-rustls" ] }
axum-tracing-opentelemetry = { version = "0.10.0", features = [ "otlp", "tracing_subscriber_ext" ] }
clap = { version = "4.1", features = [ "derive" ] }
hyper = { version = "0.14.24", features = [ "full"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
rustls = "0.20.8"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = [ "full" ] }
tower-http = { version = "0.4.0", features = [ "fs", "trace" ] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
webfinger = "0.5.1"
